Hardcode values rather that use reflection.